--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "scripts": {
     "start": "parcel src/index.html",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.17.12",
+    "@babel/preset-env": "^7.17.12",
     "@parcel/transformer-sass": "2.5.0",
     "@storybook/addon-actions": "6.5.0",
     "@storybook/addon-essentials": "6.5.0",
@@ -23,17 +25,25 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "6.5.0",
     "@storybook/testing-library": "^0.0.11",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@types/jest": "^27.5.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "babel-jest": "^28.1.0",
     "babel-loader": "^8.2.5",
     "css-loader": "5.2.7",
     "eslint": "^8.15.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "parcel": "^2.5.0",
     "prettier": "^2.6.2",
+    "react-test-renderer": "^17.0.0",
     "require-from-string": "^2.0.2",
     "sass": "^1.51.0",
     "sass-loader": "10.1.1",
     "style-loader": "2.0.0",
+    "ts-jest": "^28.0.2",
     "typescript": "^4.6.4",
     "typescript-plugin-css-modules": "^3.4.0"
   },
