--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "parcel src/index.html",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/core": "^7.17.12",
@@ -34,8 +35,10 @@
     "babel-loader": "^8.2.5",
     "css-loader": "5.2.7",
     "eslint": "^8.15.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
+    "lint-staged": ">=10",
     "parcel": "^2.5.0",
     "prettier": "^2.6.2",
     "react-test-renderer": "^17.0.0",
@@ -48,8 +51,14 @@
     "typescript-plugin-css-modules": "^3.4.0"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint  --fix",
+    "*.{js,jsx,ts,tsx,css,md,scss,json}": "prettier --write"
+  }
 }
